Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 11.0.0
-
12067afc2 (11.0)
Description
There were 3 projects in the crashing session. Loading them one-by-one in a new session didn't seem to crash.
Backtrace of the crash is attached. Unfortunately no example
Attachments
For Gerrit Dashboard: QTCREATORBUG-29438 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
493129,4 | QmlDesigner: Add context object to a connection | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |