QmlDesigner: Add context object to a connection

Fixes: QTCREATORBUG-29438
Change-Id: I3662737acf3d80c17c8004594540220296971ef3
(cherry picked from commit cfadc5a984f059b59d87194e2c7a98b92a98ad26)
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>